# sondehub-alert

./: .gitignore  Dockerfile  README.md  flake.nix  pyproject.toml
.github/workflows/: docker.yml
sondehub_alert/: config.py  main.py  sonde.py  sondehub.py  telegram.py
